final changes before testing

--- a/AvioPro/AvioPro/Views/Home/Index.cshtml
+++ b/AvioPro/AvioPro/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
         <div class="div_zindex">
             <div class="row">
                 <!-- <div class="col-md-7"></div> -->
-                <ul class="rslides" id="slider1" style="z-index:-1" >
+                <ul class="rslides" id="slider1" style="z-index:-1">
                     <li><img src="~/images/banner1.jpg" height="200" alt="" style="z-index:-1"></li>
                     <li><img src="~/images/banner2.jpeg" height="200" alt="" style="z-index:-1"></li>
                     <li><img src="~/images/banner3.jpg" height="200" alt="" style="z-index:-1"></li>
@@ -16,13 +16,57 @@
     </div>
 </section>
 
+<section id="Aboutus" class="about section-bg">
+    <div class="container">
+
+        <div class="row">
+            <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
+            <div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
+                <div class="content d-flex flex-column justify-content-center">
+                    <h3 data-aos="fade-in" data-aos-delay="100">Who We Are</h3>
+                    <div class="row">
+                        <div class="col-md-10 icon-box" data-aos="fade-up">
+                            <i class="bx bx-receipt"></i>
+                            <p>
+                                &nbsp;&nbsp;&nbsp;With
+                                AvioPro , you get original product
+                                quality every time. It is the quality products
+                                and certified vendors who work for us that
+                                drive us and make us superior. This is how
+                                we convince customers and clients in the
+                                world.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-10 icon-box" data-aos="fade-up">
+                            <i class="bx bx-receipt"></i>
+                            <p>
+                                &nbsp;&nbsp;&nbsp;To make sure our quality and products are
+                                up to mark, we only deal with authorized
+                                dealers. With our more than 10 Years of
+                                market experience, we can not only serve
+                                you better, but with exception.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div><!-- End .content-->
+        </div>
+    </div>
+    <br>
+    <br>
+</section><!-- End About Section -->
 <!-- ======= Pricing Section ======= -->
 <section id="pricing" class="pricing section-bg">
     <div class="container">
         <br>
         <div class="pricing-title">
-            <h2 data-aos="fade-in">Our Team</h2>
-            <p data-aos="fade-in">Text about team</p>
+            <h2 data-aos="fade-in">
+                Our presence
+            </h2>
+            @*<p data-aos="fade-in">Text about team</p>*@
         </div>
 
         <div class="row no-gutters">
@@ -31,15 +75,17 @@
                 <img src="~/images/industiral.jpg">
                 <br>
                 <br>
-                <h3>Industrial</h3>
+                <h3>Dubai</h3>
                 <ul>
                     <li>
                         <p>
-                            We have team with Cost
-                            conscious and analytical
-                            minds with history of success
-                            in optimizing quality in fast
-                            paced industrial environments.
+                            Avio Pro General Trading LLC
+                            PO Box No. 36287, Office 3, Umm Ramool,
+                            Al Rashidiya, Dubai, United Arab Emirates.
+
+                            Email Adress : info@avio-pro.com
+                            Landline Number : +971 (0) 4 285 5401
+                            Mobile Number : +971 (0) 55 879 1772 / +971 (0) 52 608 6856
                         </p>
                     </li>
                 </ul>
@@ -49,14 +95,16 @@
                 <img src="~/images/aviation.jpg">
                 <br>
                 <br>
-                <h3>Aviation</h3>
+                <h3>Kenya, Nairobi</h3>
                 <ul>
                     <li>
                         <p>
-                            Team with more than 10
-                            years of experience in
-                            Aviation industry is always
-                            an Advantage.
+                            Wilson Airport, Opposite tamarind tree hotel.
+
+                            Email Adress : info@avio-pro.com
+                            Landline Number : +254 (020) 466 2432
+                            Mobile Number : +254 741 499 964
+
                         </p>
                     </li>
                 </ul>
@@ -66,16 +114,13 @@
                 <img src="~/images/Technical.jpg">
                 <br>
                 <br>
-                <h3>Technical</h3>
+                <h3>Warehouse</h3>
                 <ul>
                     <li>
                         <p>
-                            Our Engineers excellent
-                            communication skills and vast
-                            experience in the field help us to
-                            know the customer needs to
-                            support their business & customers
-                            relationships Management
+                            Avio Pro General Trading LLC
+                            PO Box No. 36287, Office 3, Umm Ramool,
+                            Al Rashidiya, Dubai, United Arab Emirates.
                         </p>
                     </li>
                 </ul>
@@ -107,7 +152,7 @@
                         <p>Oil and LubricantsOil and LubricantsOil and LubricantsOil and LubricantsOil and LubricantsOil and Lubricants</p>
                     </div>
                 </div>
-                <div class="testimonial-m">
+                @*<div class="testimonial-m">
                     <div class="testimonial-img"> <img src="~/images/products/3MPolyurethaneProtectiveTape544.jpg" alt="images" /> </div>
                     <div class="testimonial-content">
                         <div class="testimonial-heading">
@@ -116,8 +161,8 @@
                         </div>
                         <p>Industrial EquipmentIndustrial EquipmentIndustrial EquipmentIndustrial EquipmentIndustrial Equipment</p>
                     </div>
-                </div>
-                <div class="testimonial-m">
+                </div>*@
+                @*<div class="testimonial-m">
                     <div class="testimonial-img"> <img src="~/images/compfilter.jpg" alt="images" /> </div>
                     <div class="testimonial-content">
                         <div class="testimonial-heading">
@@ -126,7 +171,7 @@
                         </div>
                         <p>Compressor filtersCompressor filtersCompressor filtersCompressor filtersCompressor filtersCompressor filtersCompressor filters</p>
                     </div>
-                </div>
+                </div>*@
                 <div class="testimonial-m">
                     <div class="testimonial-img"> <img src="~/images/products/new/PPG-Sealants-Down-SLider.jpg" alt="images" /> </div>          <div class="testimonial-content">
                         <div class="testimonial-heading">
@@ -136,7 +181,7 @@
                         <p>PPG SealantsPPG SealantsPPG SealantsPPG SealantsPPG SealantsPPG SealantsPPG SealantsPPG SealantsPPG Sealants.</p>
                     </div>
                 </div>
-                <div class="testimonial-m">
+                @*<div class="testimonial-m">
                     <div class="testimonial-img"> <img src="~/images/products/new/Safety-Equipments-Down-Slid1.jpg" alt="images" /> </div>
                     <div class="testimonial-content">
                         <div class="testimonial-heading">
@@ -145,7 +190,7 @@
                         </div>
                         <p>Safety ItemsSafety ItemsSafety ItemsSafety ItemsSafety ItemsSafety ItemsSafety ItemsSafety ItemsSafety Items.</p>
                     </div>
-                </div>
+                </div>*@
                 <div class="testimonial-m">
                     <div class="testimonial-img"> <img src="~/images/tyres.jpg" alt="images" /> </div>
                     <div class="testimonial-content">
@@ -183,4 +228,3 @@
     <div class="-overlay"></div>
 </section>
 <!-- /Testimonial-->
-
