changes in index file

--- a/AvioPro/AvioPro/Views/Home/Index.cshtml
+++ b/AvioPro/AvioPro/Views/Home/Index.cshtml
@@ -176,7 +176,8 @@
                         </div>
                     </div>*@
                 <div class="testimonial-m">
-                    <div class="testimonial-img"> <img src="~/images/products/new/PPG-Sealants-Down-SLider.jpg" alt="images" /> </div>          <div class="testimonial-content">
+                    <div class="testimonial-img"> <img src="~/images/products/new/PPG-Sealants-Down-SLider.jpg" alt="images" /> </div>          
+                    <div class="testimonial-content">
                         <div class="testimonial-heading">
                             <h5>PPG Sealants</h5>
                             <span class="client-designation">PPG Sealants</span>
