--- a/AvioPro/AvioPro/assets/css/style - Copy.css
+++ b/AvioPro/AvioPro/assets/css/style - Copy.css
@@ -1,5 +1,10 @@
 ﻿@charset "utf-8";
 
+/*
+Theme Name: CarForYou - Responsive Car Dealer HTML5 Template.
+Author: WMD Team
+Version:1.0
+*/
 
 /*===========================
  =  Table of CSS
@@ -376,91 +381,88 @@ blockquote {
     fill: #fa2837;
 }
 
-    .btn-link:hover {
+.btn-link:hover {
         color: #ff0012;
         fill: #ff0012;
     }
-
 a {
-    color: black;
-}
-
-    a:hover, a:focus {
+    color:black;
+}    
+a:hover, a:focus {
         color: orange;
-        font-weight: bold;
+        font-weight:bold;
     }
-
-.btn,
-.nav-tabs > li > a.active,
-.nav-tabs > li > a.active:focus,
-.nav-tabs > li > a.active:hover,
-.recent-tab .nav.nav-tabs li a.active,
-.fun-facts-m, .featured-icon,
-.owl-pagination .owl-page.active,
-#testimonial-slider .owl-pagination .owl-page.active,
-.social-follow.footer-social a:hover,
-.back-top a,
-.team_more_info ul li a:hover,
-.tag_list ul li a:hover,
-.pagination ul li.current,
-.pagination ul li:hover,
-.btn.outline:hover,
-.btn.outline:focus,
-.share_article ul li:hover,
-.nav-tabs > li a.active:hover,
-.nav-tabs > li a.active:focus,
-.label-icon,
-.navbar-expand-lg .navbar-toggle .icon-bar,
-.navbar-expand-lg .navbar-toggle:focus, .navbar-expand-lg .navbar-toggle:hover,
-.label_icon,
-.navbar-nav > li > .dropdown-menu,
-.add_compare .checkbox,
-.search_other,
-.vs,
-.td_divider,
-.search_other_inventory,
-#other_info,
-.main_bg,
-.slider .slider-handle, .slider .slider-selection {
-    background: #fa2837 none repeat scroll 0 0;
-    fill: #fa2837;
-}
-
-    .btn:hover, .btn:focus,
-    .search_other:hover,
-    #other_info:hover {
-        background-color: #c60210;
-        fill: #fb4d59;
-    }
-
-    .nav-tabs > li.active > a,
-    .nav-tabs > li.active > a:focus,
-    .nav-tabs > li.active > a:hover,
+    .btn,
+    .nav-tabs > li > a.active,
+    .nav-tabs > li > a.active:focus,
+    .nav-tabs > li > a.active:hover,
+    .recent-tab .nav.nav-tabs li a.active,
+    .fun-facts-m, .featured-icon,
+    .owl-pagination .owl-page.active,
+    #testimonial-slider .owl-pagination .owl-page.active,
     .social-follow.footer-social a:hover,
-    .page-header,
+    .back-top a,
+    .team_more_info ul li a:hover,
     .tag_list ul li a:hover,
-    .btn.outline,
-    .share_article ul li,
-    blockquote,
-    .social-follow a:hover,
-    .radio label:before,
-    .navbar-expand-lg .navbar-toggle,
-    .owl-buttons div,
-    .about_info .icon_box {
-        border-color: #fa2837;
+    .pagination ul li.current,
+    .pagination ul li:hover,
+    .btn.outline:hover,
+    .btn.outline:focus,
+    .share_article ul li:hover,
+    .nav-tabs > li a.active:hover,
+    .nav-tabs > li a.active:focus,
+    .label-icon,
+    .navbar-expand-lg .navbar-toggle .icon-bar,
+    .navbar-expand-lg .navbar-toggle:focus, .navbar-expand-lg .navbar-toggle:hover,
+    .label_icon,
+    .navbar-nav > li > .dropdown-menu,
+    .add_compare .checkbox,
+    .search_other,
+    .vs,
+    .td_divider,
+    .search_other_inventory,
+    #other_info,
+    .main_bg,
+    .slider .slider-handle, .slider .slider-selection {
+        background: #fa2837 none repeat scroll 0 0;
+        fill: #fa2837;
     }
 
-    .recent-tab .nav.nav-tabs li a.active::after {
-        border-color: #fa2837 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
-    }
+        .btn:hover, .btn:focus,
+        .search_other:hover,
+        #other_info:hover {
+            background-color: #c60210;
+            fill: #fb4d59;
+        }
 
-    .td_divider:after {
-        border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0 ) rgba(0, 0, 0, 0 ) #fa2837;
-    }
+        .nav-tabs > li.active > a,
+        .nav-tabs > li.active > a:focus,
+        .nav-tabs > li.active > a:hover,
+        .social-follow.footer-social a:hover,
+        .page-header,
+        .tag_list ul li a:hover,
+        .btn.outline,
+        .share_article ul li,
+        blockquote,
+        .social-follow a:hover,
+        .radio label:before,
+        .navbar-expand-lg .navbar-toggle,
+        .owl-buttons div,
+        .about_info .icon_box {
+            border-color: #fa2837;
+        }
 
-    .navbar-nav > li > .dropdown-menu li {
-        border-bottom: 1px solid #e21625;
-    }
+        .recent-tab .nav.nav-tabs li a.active::after {
+            border-color: #fa2837 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+        }
+
+        .td_divider:after {
+            border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0 ) rgba(0, 0, 0, 0 ) #fa2837;
+        }
+
+        .navbar-nav > li > .dropdown-menu li {
+            border-bottom: 1px solid #e21625;
+        }
 
 @media (max-width:767px) {
     .navbar-expand-lg .navbar-nav .open .dropdown-menu > li > a:focus, .navbar-expand-lg .navbar-nav .open .dropdown-menu > li > a:hover {
@@ -479,11 +481,9 @@ a {
 }
 
 .dark-overlay {
-    /*background: rgba(0, 0, 0, 0.75) none repeat scroll 0 0;*/
-    background: none repeat scroll 0 0;
-    background-color: rgba(250, 205, 48, 1);
+    background: rgba(0, 0, 0, 0.75) none repeat scroll 0 0;
     content: "";
-    height: 80%;
+    height: 100%;
     left: 0;
     position: absolute;
     top: 0;
@@ -885,6 +885,7 @@ table {
 .header_info {
     float: right;
     text-align: right;
+   
 }
 
 .social-follow {
@@ -943,10 +944,6 @@ table {
     margin: 0;
     text-transform: uppercase;
 }
-
-    .uppercase_text a {
-        color: darkred;
-    }
 
 .header_widgets {
     display: inline-block;
@@ -1062,24 +1059,24 @@ table {
 
 #navigation {
     padding: 0;
-    max-height: 90px;
+     max-height:90px; 
 }
 
 nav.navbar {
-    /* background: #efefef none repeat scroll 0 0;*/
+   /* background: #efefef none repeat scroll 0 0;*/
     border: medium none;
     margin: 0 auto;
 }
 
 .navbar-expand-lg .navbar-nav > li {
-    /* margin: 0 4px 0 0;
+   /* margin: 0 4px 0 0;
     padding: 0px;
     border-radius: 0px;
     transition-duration: 0.3s;
     -moz-transition-duration: 0.3s;
     -o-transition-duration: 0.3s;
     -webkit-transition-duration: 0.3s;*/
-    /* -ms-transition-duration: 0.3s;*/
+   /* -ms-transition-duration: 0.3s;*/
 }
 
 .navbar-expand-lg .navbar-nav > .active > a,
@@ -1178,7 +1175,6 @@ nav.navbar {
     .navbar-expand-sm .navbar-nav > li.dropdown:hover .dropdown-menu {
         display: block;
     }
-
     .navbar-nav > li > .dropdown-menu {
         top: 80px;
         display: block !important;
@@ -1956,17 +1952,13 @@ nav.navbar {
     background-image: url("../images/bg.jpg");
 }
 
-.testimonial-section1 {
-    background-image: none;
-}
-
-
 .white-text h2 {
     color: #ffffff;
+    cf
 }
 
 .testimonial-m {
-    padding-left: 30px;
+    padding-left: 20px;
     padding-right: 20px;
     position: relative;
     z-index: 1;
@@ -1985,26 +1977,9 @@ nav.navbar {
     z-index: 1;
 }
 
-.testimonial-img1 {
-    border: 5px solid #ffffff;
-    border-radius: 50%;
-    float: left;
-    height: 215px;
-    left: 30px;
-    overflow: hidden;
-    position: absolute;
-    top: 42px;
-    width: 215px;
-    z-index: 1;
-}
-
-    .testimonial-img1 > img {
+    .testimonial-img > img {
         max-width: 100%;
     }
-
-.testimonial-img > img {
-    max-width: 100%;
-}
 
 .testimonial-content {
     background: lightgray none repeat scroll 0 0;
@@ -2065,26 +2040,8 @@ nav.navbar {
     background: #fff;
 }
 
-#testimonial-slider1 .owl-pagination .owl-page {
-    background: #fff;
-}
 
-.testimonial-img {
-    border: 5px solid #ffffff;
-    border-radius: 50%;
-    float: left;
-    height: 215px;
-    left: 30px;
-    overflow: hidden;
-    position: absolute;
-    top: 42px;
-    width: 215px;
-    z-index: 1;
-}
 
-    .testimonial-img > img {
-        max-width: 100%;
-    }
 /*----------------------
 	3.9. Blog-Section
 -----------------------------*/
@@ -2269,13 +2226,13 @@ nav.navbar {
 	3.12. Footer
 ------------------------*/
 .footer-top {
-    background: #FACD30 none repeat scroll 0 0;
+    background: #222222 none repeat scroll 0 0;
     color: #9d9d9d;
     padding: 10px 0;
 }
 
     .footer-top h6 {
-        color: darkred;
+        color: #ffffff;
         font-size: 15px;
         text-transform: uppercase;
         margin-bottom: 40px;
@@ -2304,7 +2261,7 @@ nav.navbar {
             }
 
             .footer-top ul li a {
-                color: darkred;
+                color: #fff;
             }
 
 input.newsletter-input {
@@ -2323,12 +2280,12 @@ input.newsletter-input {
 }
 
 .footer-bottom {
-    background: #E4B305 none repeat scroll 0 0;
+    background: #191919 none repeat scroll 0 0;
     padding: 22px 0;
 }
 
 .footer_widget {
-    color: black;
+    color: #ffffff;
     display: inline-block;
     margin: 6px 0 0 30px;
 }
@@ -2354,7 +2311,7 @@ input.newsletter-input {
         }
 
             .footer_widget ul li a {
-                color: darkred;
+                color: #fff;
                 display: block;
                 font-size: 18px;
                 margin: 0 4px;
@@ -2365,7 +2322,7 @@ input.newsletter-input {
                 }
 
 .copy-right {
-    color: darkred;
+    color: #ffffff;
     font-size: 15px;
     line-height: 40px;
     margin: 0 auto;
@@ -2798,7 +2755,7 @@ form .slider.slider-horizontal {
 }
 
 .page-header_wrap {
-    padding: 15px 0;
+    padding: 60px 0;
     position: relative;
     text-align: center;
 }
@@ -2809,10 +2766,8 @@ form .slider.slider-horizontal {
 }
 
     .page-heading h2, .page-heading h1 {
-        font-size: 21px;
-        font-weight: Bold;
-        text-decoration: underline;
-        color: Maroon;
+        font-size: 40px;
+        color: #ffffff;
         margin: 0 auto;
     }
 
@@ -2829,7 +2784,7 @@ form .slider.slider-horizontal {
 }
 
     .coustom-breadcrumb li {
-        color: black;
+        color: #ffffff;
         display: inline-block;
         font-size: 16px;
         line-height: 45px;
@@ -2840,16 +2795,16 @@ form .slider.slider-horizontal {
     }
 
     .coustom-breadcrumb a {
-        color: black;
+        color: #ffffff;
     }
 
     .coustom-breadcrumb li a:hover {
-        color: black;
+        color: #fff;
         text-decoration: underline;
     }
 
     .coustom-breadcrumb a::after {
-        color: black;
+        color: #fff;
         content: "";
         font-family: fontawesome;
         position: absolute;
@@ -5084,7 +5039,6 @@ table.info-tabel tr td {
 
 .coming_soon_wrap .footer_widget {
     float: right;
-    color: darkred;
 }
 
     .coming_soon_wrap .footer_widget ul li a {
@@ -6808,14 +6762,12 @@ table.info-tabel tr td {
         width: 100%;
         border: 0;
     }
-
 .presense {
     width: 100%;
     height: 200px;
     background-image: url('~/images/presense_new.png');
     background-size: 100% 100%;
 }
-
 .pricing {
     background: linear-gradient(180deg, #f2f6fa 0%, #fff 100%);
     /* background: lightgray; */
@@ -6966,7 +6918,6 @@ table.info-tabel tr td {
     width: 100%;
     background-color: white;
 }
-
 .quantity {
     display: inline-block;
 }
